fix index.html footer overflow & body css removeed

--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -13616,10 +13616,6 @@ textarea.form-control-lg {
   color: #F9C745;
 }
 
-html, body {
-  overflow-x: hidden;
-}
-
 .strokeText {
   position: relative;
 }
@@ -13678,6 +13674,10 @@ html, body {
   margin-left: -11px;
 }
 
+footer {
+  overflow-x: hidden;
+}
+
 .sidebar {
   display: inline;
   margin: 5px;
@@ -13715,6 +13715,13 @@ html, body {
   border: 0;
   background-color: transparent;
   height: 339px;
+}
+
+body {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .adopt-page-item {
