--- a/stylesheets/pages/_adoptArea.scss
+++ b/stylesheets/pages/_adoptArea.scss
@@ -1,3 +1,6 @@
+body {
+    flex-direction:column;
+}
 .adopt-page-item {
     margin: 10px;
 }
