--- a/stylesheets/pages/_index.scss
+++ b/stylesheets/pages/_index.scss
@@ -1,7 +1,3 @@
-html, body {
-    overflow-x: hidden;
-}
-
 .strokeText{
     position: relative;
     &::before {
@@ -56,4 +52,7 @@ html, body {
     border-top-color: #000;
     border-width: 11px;
     margin-left: -11px;
+}
+footer {
+    overflow-x: hidden;
 }
